<resources>
    <string name="app_name">ImageProcessor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="merge_pic">图片拼接</string>
    <string name="edit_pic">图片编辑</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="choose_pics">选择图片</string>
    <string name="dynamic_filter">动态滤镜</string>
    <string name="opengl">OpenGL</string>
</resources>