<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_merge_pic"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/merge_pic" />
        <item
            android:id="@+id/nav_edit_pic"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/edit_pic" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_dynamic"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/dynamic_filter" />
        <item
            android:id="@+id/nav_opengl"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/opengl" />
    </group>
</menu>