<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_opengl">

    <fragment
        android:id="@+id/nav_merge_pic"
        android:name="com.devmcry.imageprocessor.ui.merge.MergePicFragment"
        android:label="@string/merge_pic"
        tools:layout="@layout/fragment_merge" />

    <fragment
        android:id="@+id/nav_edit_pic"
        android:name="com.devmcry.imageprocessor.ui.edit.EditPicFragment"
        android:label="@string/edit_pic"
        tools:layout="@layout/fragment_edit" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.devmcry.imageprocessor.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@id/nav_dynamic"
        android:name="com.devmcry.imageprocessor.ui.dynamic.DynamicFilterFragment"
        android:label="@string/dynamic_filter"
        tools:layout="@layout/fragment_dynamic" />


    <fragment
        android:id="@id/nav_opengl"
        android:name="com.devmcry.imageprocessor.ui.opengl.OpenGLFragment"
        android:label="@string/opengl"
        tools:layout="@layout/fragment_opengl" />
</navigation>